[tool.poetry]
name = "causica"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.10"

# Needs actableai-lib dependencies to work
pyro-ppl = ">=1.8.0, <1.9.0"
mlflow = "^1.27.0"
gcastle = {git = "https://github.com/confoundry/trustworthyAI.git", rev = "a768c0a"}
lingam = "1.5.5"
causalnex = {git = "https://github.com/WenboGong/causalnex.git", branch = "develop" }
tigramite = {git = "https://github.com/WenboGong/tigramite.git", branch = "develop"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
